# alogram-python

./: AI.md  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASE.json  mock_verify.py  payrisk_v1  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: publish.yml
examples/: async_signal_ingestion.py  check_risk.py  custom_idempotency.py  full_lifecycle_workflow.py  production_error_handling.py  webhook_verification.py
src/alogram_payrisk/: __init__.py  client.py  compat.py  exceptions.py  testing.py  webhooks.py
src/alogram_payrisk/_generated/: __init__.py
src/alogram_payrisk/_generated/payrisk_v1/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
src/alogram_payrisk/_generated/payrisk_v1/api/: __init__.py  forensic_data_api.py  payrisk_api.py  risk_scoring_api.py  roadmap_preview_api.py  signal_intelligence_api.py  system_api.py
src/alogram_payrisk/_generated/payrisk_v1/models/: __init__.py  account.py  account_check_request.py  avs_result_enum.py  bank_transfer.py  card.py  card_network_enum.py  category_signal.py  channel_enum.py  check_request.py  confidence_enum.py  crypto.py  cvv_result_enum.py  decision_response.py  device_info.py  discount_code.py  entity_ids.py  entry_method_enum.py  external_assessment.py  fraud_score.py  identity.py  integrity.py  interaction.py  interaction_type_enum.py  invoice.py  ip_info.py  kyc_check_request.py  kyc_payload.py  merchant_context.py  order_context.py  payer_type_enum.py  payment_authorization_outcome.py  payment_capture_outcome.py  payment_card_type_enum.py  payment_chargeback.py  payment_chargeback_outcome.py  payment_dispute_outcome.py  payment_event.py  payment_event_type.py  payment_method.py  (+25 more)
tests/: test_client.py  test_exhaustive.py  test_fuzz.py  test_serialization.py
