[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "alogram-payrisk"
version = "0.1.6-rc.14"
description = "The official Alogram Payrisk 'Smart' SDK for Python. Features built-in resiliency, ergonomic risk intelligence, and automated identity management."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Alogram Inc.", email = "support@alogram.ai"}
]
keywords = ["alogram", "payrisk", "fraud", "risk", "payments"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "pydantic>=2.0.0",
    "urllib3>=2.0.0",
    "httpx>=0.27.0",
    "tenacity>=8.0.0",
    "lazy-imports>=0.3.1",
    "python-dateutil>=2.8.2",
]

[tool.setuptools]
package-data = {"*" = ["py.typed"]}

[project.urls]
Homepage = "https://www.alogram.ai"
Repository = "https://github.com/alogram/alogram-python"
Documentation = "https://developers.alogram.ai"
"Bug Tracker" = "https://github.com/alogram/alogram-python/issues"

[project.optional-dependencies]
telemetry = [
    "opentelemetry-api",
]
dev = [
    "pytest",
    "pytest-cov",
    "responses",
    "black",
    "isort",
    "mypy",
    "opentelemetry-api",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
